Fix spacing of footer

--- a/www/sjc_12926_app.css
+++ b/www/sjc_12926_app.css
@@ -143,4 +143,8 @@ a[data-value="External Resources"]{
   font-weight: bold
 }
 
+#footer {
+  margin-top: 20px;
+}
+
     
